2006-03-06  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/main.py:
	* PyICQt.py:
	Added option to enable profiling.

	* src/legacy/glue.py:
	Updated version to 0.7a.

2006-03-05  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/legacylist.py:
	Fixed updateNickname to behave itself...

	* src/legacy/legacylist.py:
	Fixed stupid bug with cached icons.

	* src/web/handler.py:
	Fixed bug with web access check.

	* src/legacy/legacylist.py:
	Adjusted encoding handling of nicknames.

	* src/main.py:
	Fixed bug with debugLog vs debugFile.

	* src/jabw.py:
	Added catch for nickname.

	* src/tlib/oscar.py:
	Added ability to connect on other ports properly besides 5190.

	* src/legacy/icqt.py:
	Fixed for stupid problems with port and socks port handling.

	* src/main.py:
	Fixes for jabberd2 disconnects. (not complete)

2006-03-04  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/glue.py:
	Fixed misplaced return.

	* tools/migrate.py:
	* tools/managessi.py:
	Switched to /usr/bin/env python.

	* src/tlib/oscar.py:
	Added functionality to request "short info".

	* src/legacy/icqt.py:
	Added pieces to auto-retrieve nicknames.

	* src/jabw.py:
	Switched namespace for roster subsync.

	* src/legacy/icqt.py:
	Added better handling of nick.

	* src/tlib/oscar.py:
	Updated to actually include extended pieces of SSIBuddy.

	* src/legacy/glue.py:
	Fixed bug with retrieval of ip address and such.

2006-03-03  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/glue.py:
	Removed print of variable that didn't exist.

	* src/tlib/oscar.py:
	Fixed lack of check for errorurl.

2006-03-01  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/web/handler.py:
	Fixed stupid call to attribute that didn't exist.

	* tools/Makefile:
	Made testinst more verbose.

	* src/legacy/legacylist.py:
	Fixed bad call to updateIconHashes.

2006-02-28  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/tlib/oscar.py:
	Fixed warning (thanks to pkern from chatroom).

	* src/legacy/legacylist.py: